# mwprop

./: .coveragerc  .gitignore  LICENSE.rst  OPTIMIZATION_SESSION_SUMMARY.md  README.md  environment.yaml  pyproject.toml  pytest.ini  setup.cfg
dev/optimization/: benchmark_dmdsm.py  compare_numba.py  final_benchmark.py  profile_dmdsm.py
ne2025f/: README.md
ne2025f/bin.NE2025/: fort.24  fort.25  fort.99  gal25.inp  ne_arms_log_mod.inp  run_NE2025.pl
ne2025f/cal.NE2025/: GCdata.npz  README.txt  psr_dist_data.npz  scattering_database_nov2025.npz
ne2025f/input.NE2025/: fort.24  fort.25  log_arms.out  ne_gc.inp
ne2025f/src.NE2025/: NE2025.f  density.NE2025.f  dmdsm.NE2025.f  makefile  neLISM.NE2025.f  neclumpN.f  nevoidN.NE2025.f
src/: NE2001p_master_test.py
src/mwprop/: get_constants_waveprop_astropy_version.py  get_constants_waveprop_scipy_version.py
src/mwprop/cli/: NE2001.py  NE2001p.py  NE2025.py  NE2025p.py  __init__.py  los_diagnostics.py  test_NE2025p.py  test_ne2025.py
src/mwprop/ne2001p/: NE2001.py  README_NE2001p.txt  config_ne2001p.py  density_components.py  density_ne2001.py  dmdsm_ne2001p.py  ne2001p_input.py  ne_arms_ne2001p.py  ne_lism.py  neclumpN_NE2001_fast.py  nevoidN_NE2001.py
src/mwprop/ne2001p/params/: gal01.inp  ne_gc.inp
src/mwprop/nemod/: NE2001.py  NE2025.py  README.txt  config_nemod.py  density.py  density_components.py  dmdsm.py  galaxy_model.py  ne_arms.py  ne_input.py  ne_lism.py  neclumpN_fast.py  nevoidN.py  numba_compat.py
src/mwprop/nemod/params/: gal01.inp  gal25.inp  ne_gc.NE2001.inp  ne_gc.NE2025.inp  which_model.inp
src/mwprop/scattering_functions/: iss_mw_utils2020p_mod.py  scattering_functions2020.py  taudm_mw_pulsars.py
tests/: __init__.py  conftest.py  test_dmdsm.py  test_iss_mw_utils_main.py  test_ne2001_main.py  test_ne2025_main.py  test_ne_gc.py  test_ne_input_main.py  test_ne_models_roundtrip.py  test_nevoidN.py  test_numba_smoke.py  test_plot_baselines.py  test_set_model.py  test_smallscale_vectorize.py  test_smooth_components_regression.py  test_smoothscale_vectorize.py
