[metadata]
name = mwprop
version = 0.9
author = James Cordes and Stella Ocker
author_email = stella.ocker@gmail.com
description = A python package for NE2001
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stella-ocker/mwprop
project_urls =
    Bug Tracker = https://github.com/stella-ocker/mwprop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = mwprop,mwprop.ne2001p,mwprop.scattering_functions
include_package_data = True
python_requires = >=3.6
scripts =
    bin/NE2001p.py
    bin/los_diagnostics.py

[options.package_data]
* = *.txt,params/*

[options.packages.find]
where = src
